data e cronometro de duraçao de proposta

--- a/views/proposals/create/create_proposals.ejs
+++ b/views/proposals/create/create_proposals.ejs
@@ -232,11 +232,12 @@
             <form id="proposal-form" class="proposal-form">
                 <label for="tempoDeProposta">Tempo de proposta</label>
                 <select name="tempoDeProposta" id="tempoDeProposta" class="input sm" id="">
-                    <option value="1 dia">1 dia</option>
-                    <option value="3 dias">3 dias</option>
-                    <option value="1 semana">1 semana</option>
-                    <option value="1 mês">1 mês</option>
-                </select>
+    <option value="1 dia">1 dia</option>
+    <option value="3 dias">3 dias</option>
+    <option value="1 semana">1 semana</option>
+    <option value="1 mês">1 mês</option>
+    <option value="indefinido">Indefinido</option>
+</select>
                 <p class="text-sm text-gray">Sua proposta ficará no ar até: 20 de Junho de 2023</p>
 
                 <label for="">Opção adicional</label>
