--- a/views/chat/chat.ejs
+++ b/views/chat/chat.ejs
@@ -23,7 +23,7 @@
 
     <div class="chat-container">
         <div class="chat-header">
-            <img src="https://via.placeholder.com/40" alt="avatar" />
+            <img src='https://cdn-icons-png.flaticon.com/512/149/149071.png' alt="avatar" />
             <span>Usuário 1</span>
         </div>
         <div class="messages">
