foto padrao se usuario nao tiver uma

--- a/views/proposals/create/proposals_create.ejs
+++ b/views/proposals/create/proposals_create.ejs
@@ -14,7 +14,7 @@
       <div class="form-container-descricao">
         <div class="proposta-card">
           <div class="autor-info">
-            <img id="preview-foto" src="https://via.placeholder.com/40" alt="Foto do autor">
+            <img id="preview-foto" src="https://cdn-icons-png.flaticon.com/512/149/149071.png" alt="Foto do autor">
             <span id="preview-autor">Nome do Autor</span>
           </div>
           <div class="head">
