--- a/public/css/profile/profile.css
+++ b/public/css/profile/profile.css
@@ -4,6 +4,20 @@
 @import "proposal.css";
 
 @import "partials/layout.css";
+.edit svg {
+  filter: drop-shadow(0.1px 0.1px 0 #426AB2)
+          drop-shadow(-0.1px 0.1px 0 #426AB2)
+          drop-shadow(0.1px -0.1px 0 #426AB2)
+          drop-shadow(-0.1px -0.1px 0 #426AB2);
+}
+
+.delete svg {
+  filter: drop-shadow(0.1px 0.1px 0 #B22222)
+          drop-shadow(-0.1px 0.1px 0 #B22222)
+          drop-shadow(0.1px -0.1px 0 #B22222)
+          drop-shadow(-0.1px -0.1px 0 #B22222);
+}
+
 
 .card-infos {
     position: relative; 
