--- a/views/login-user/login.ejs
+++ b/views/login-user/login.ejs
@@ -3,7 +3,7 @@
 </head>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link rel="stylesheet" href="/css/login/login.css">
-<div class="container flex flex-col align-center justify-center gap-4 pd-3 bg-gray-100 rounded-xl">
+<div class="container border border-gray-25 border-solid flex flex-col align-center justify-center gap-4 pd-3 bg-gray-100 rounded-xl">
     <div class="logo-container w-full flex justify-center items-center">
         <img src="/assets/image/logo.svg" alt="Logo" class="logo">
     </div>
@@ -50,7 +50,7 @@
         </style>
         <button class="entrar btn btn-purple" type="submit">Entrar</button>
     </form>
-    <p class="register-link">Não tem uma conta? <a href="/register">Cadastre-se</a></p>
+    <p class="register-link">Não tem uma conta? <a class="link text-primary no-underline" href="/register">Cadastre-se</a></p>
 </div>
 
 <script type="module" src="/js/entrar.js"></script>
