--- a/public/css/chat/chat.css
+++ b/public/css/chat/chat.css
@@ -7,22 +7,24 @@
     padding: 0;
 }
 
-body {
-    font-family: Arial, sans-serif;
-    background-color: #111;
-    color: #fff;
-    display: flex;
-    height: 90vh;
+body{
+    height: calc(100vh - 80px);
+    overflow: hidden;
+}
+
+footer {
+    display: none !important;
 }
 
 .sidebar {
     width: 300px;
     background-color: #1e1e1e;
+    height: 100%;
     padding: 1rem;
     border-right: 1px solid #333;
     display: flex;
     flex-direction: column;
-    gap: 1rem;
+    gap: 5px;
     overflow-y: auto;
     scrollbar-width: thin;
     scrollbar-color: #444 transparent;
@@ -118,9 +120,10 @@ body {
 .chat-container {
     flex: 1;
     display: flex;
+    padding: 5px;
     flex-direction: column;
     justify-content: space-between;
-    padding: 1rem;
+    align-items: center;
     position: relative;
     height: 100%;
 }
@@ -165,7 +168,6 @@ body {
 }
 
 .message {
-    margin-bottom: 1rem;
     max-width: 60%;
     padding: 0.6rem 1rem;
     border-radius: 10px;
@@ -215,18 +217,9 @@ body {
     display: flex;
     align-items: center;
     gap: 1rem;
-    padding: 0.5rem 0;
+    max-width: 844px;
+    width: 100%;
     transition: all 0.3s ease;
-}
-
-.input-area input[type="text"] {
-    flex: 1;
-    padding: 0.6rem;
-    border: none;
-    border-radius: 5px;
-    background: #2a2a2a;
-    color: white;
-    transition: background 0.3s ease;
 }
 
 .input-area input[type="text"]:focus {
@@ -254,15 +247,10 @@ body {
     .sidebar {
         display: none;
     }
-
-    body {
-        flex-direction: column;
-        height: auto;
-    }
-
     .chat-container {
         height: auto;
         padding: 0.5rem;
+        width: 100%;
     }
 
     .chat-header {
@@ -303,6 +291,7 @@ body {
 .input-area.show {
     display: flex;
     opacity: 1;
+    width: 100%;
     transform: translateY(0);
 }
 
@@ -312,6 +301,8 @@ body {
     align-items: flex-start;
     overflow-y: auto;
     flex: 1;
+    max-width: 1080px;
+    width: 100%;
     padding-right: 1rem;
     margin-bottom: 1rem;
     scroll-behavior: smooth;
