--- a/views/chat/chat.ejs
+++ b/views/chat/chat.ejs
@@ -10,86 +10,78 @@
 </head>
 
 <body>
-    <div class="sidebar">
-        <div>
-            <h2>Conversas</h2>
-            <div style="width: 100%; height: 2px; background-color: #414141;"></div>
-        </div>
-
-
-        <input type="text" placeholder="Buscar" />
-
-    </div>
-
-    <div class="chat-container">
-        <div class="chat-header">
-            <img src='https://cdn-icons-png.flaticon.com/512/149/149071.png' alt="avatar" />
-            <span>Usuário 1</span>
-        </div>
-        <div class="messages">
-            <div class="message user">Me envie o arquivo que você tem em mente</div>
-            <div class="message other">
-                Esse design está maravilhoso! adsdadadsadadaddasdada
-                dadsdadadadsadasdasdadadsasdadasdasdasdasdasdasdadadada
+    <div class="container-chat flex flex-row h-full" style="width: 100%;">
+        <div class="sidebar">
+            <div>
+                <h2>Conversas</h2>
+                <div style="width: 100%; height: 1px; background-color: #414141;"></div>
             </div>
-            <div class="message user">
-                Acho que está bom assim, textos espaçados, bl bla bla, dá para escrever bem e o design se ajusta
-                facilmente
-                aaaaaaaaaaaaaa aaaaaa aaaaaaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
-            </div>
+            <input type="text" placeholder="Buscar" />
         </div>
-
-        <div id="previewImagemContainer" style="display: none; padding: 10px;">
-            <div class="parteSuperiorPreview">
-                <button id="fecharPreview"
-                    style="margin-top: 10px; background: #333; color: white; border: none; padding: 6px 12px; border-radius: 6px; cursor: pointer;">
-                    X
-                </button>
+        <div class="chat-container">
+            <div class="chat-header">
+                <img src='https://cdn-icons-png.flaticon.com/512/149/149071.png' alt="avatar" />
+                <span>Usuário 1</span>
             </div>
-
-            <img id="previewImagem" src="" alt="Prévia da imagem" />
-
-        </div>
-        <input type="file" id="inputImagemOculto" accept="image/*" style="display: none;" />
-
-        <div id="previewLink" style="display:none; margin-bottom: 5px;"></div>
-
-        <div class="input-area">
-            <button class="btnAnexos" id="btnAnexos" style="font-size: 15px;">
-                +
-            </button>
-            <input type="text" placeholder="Digite uma mensagem..." />
-            <button id="btnEnviar">
-                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="white" width="20px" height="20px">
-                    <path
-                        d="M3.478 2.404a.75.75 0 0 0-.926.941l2.432 7.905H13.5a.75.75 0 0 1 0 1.5H4.984l-2.432 7.905a.75.75 0 0 0 .926.94 60.519 60.519 0 0 0 18.445-8.986.75.75 0 0 0 0-1.218A60.517 60.517 0 0 0 3.478 2.404Z" />
-                </svg>
-            </button>
-
-            <div class="menu-anexos" id="menuAnexos">
-                <button id="anexarImagem">
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="size-6">
-                        <path fill-rule="evenodd"
-                            d="M1.5 6a2.25 2.25 0 0 1 2.25-2.25h16.5A2.25 2.25 0 0 1 22.5 6v12a2.25 2.25 0 0 1-2.25 2.25H3.75A2.25 2.25 0 0 1 1.5 18V6ZM3 16.06V18c0 .414.336.75.75.75h16.5A.75.75 0 0 0 21 18v-1.94l-2.69-2.689a1.5 1.5 0 0 0-2.12 0l-.88.879.97.97a.75.75 0 1 1-1.06 1.06l-5.16-5.159a1.5 1.5 0 0 0-2.12 0L3 16.061Zm10.125-7.81a1.125 1.125 0 1 1 2.25 0 1.125 1.125 0 0 1-2.25 0Z"
-                            clip-rule="evenodd" />
-                    </svg>
-
-                    Imagens
-                </button>
-                <button id="anexarLink">
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="size-6"
-                        style="transform: rotate(44deg);">
-                        <path fill-rule="evenodd"
-                            d="M19.902 4.098a3.75 3.75 0 0 0-5.304 0l-4.5 4.5a3.75 3.75 0 0 0 1.035 6.037.75.75 0 0 1-.646 1.353 5.25 5.25 0 0 1-1.449-8.45l4.5-4.5a5.25 5.25 0 1 1 7.424 7.424l-1.757 1.757a.75.75 0 1 1-1.06-1.06l1.757-1.757a3.75 3.75 0 0 0 0-5.304Zm-7.389 4.267a.75.75 0 0 1 1-.353 5.25 5.25 0 0 1 1.449 8.45l-4.5 4.5a5.25 5.25 0 1 1-7.424-7.424l1.757-1.757a.75.75 0 1 1 1.06 1.06l-1.757 1.757a3.75 3.75 0 1 0 5.304 5.304l4.5-4.5a3.75 3.75 0 0 0-1.035-6.037.75.75 0 0 1-.354-1Z"
-                            clip-rule="evenodd" />
-                    </svg>
-                    Link
-                </button>
+            <div class="messages">
+                <div class="message user">Me envie o arquivo que você tem em mente</div>
+                <div class="message other">
+                    Esse design está maravilhoso! adsdadadsadadaddasdada
+                    dadsdadadadsadasdasdadadsasdadasdasdasdasdasdasdadadada
+                </div>
+                <div class="message user">
+                    Acho que está bom assim, textos espaçados, bl bla bla, dá para escrever bem e o design se ajusta
+                    facilmente
+                    aaaaaaaaaaaaaa aaaaaa aaaaaaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaaa aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
+                </div>
             </div>
-        </div>
-
-        <div class="nenhum-contato-selecionado">
-            <p>Selecione um contato para iniciar a conversa</p>
+            <div id="previewImagemContainer" style="display: none; padding: 10px;">
+                <div class="parteSuperiorPreview">
+                    <button id="fecharPreview"
+                        style="margin-top: 10px; background: #333; color: white; border: none; padding: 6px 12px; border-radius: 6px; cursor: pointer;">
+                        X
+                    </button>
+                </div>
+                <img id="previewImagem" src="" alt="Prévia da imagem" />
+            </div>
+            <input type="file" id="inputImagemOculto" accept="image/*" style="display: none;" />
+            <div id="previewLink" style="display:none; margin-bottom: 5px;"></div>
+            <div class="flex justify-center w-full">
+                <div class="input-area">
+                    <button class="btnAnexos" id="btnAnexos" style="font-size: 15px;">
+                        +
+                    </button>
+                    <input type="text" class="form-control sm" placeholder="Digite uma mensagem..." />
+                    <button id="btnEnviar">
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="white" width="20px" height="20px">
+                            <path
+                                d="M3.478 2.404a.75.75 0 0 0-.926.941l2.432 7.905H13.5a.75.75 0 0 1 0 1.5H4.984l-2.432 7.905a.75.75 0 0 0 .926.94 60.519 60.519 0 0 0 18.445-8.986.75.75 0 0 0 0-1.218A60.517 60.517 0 0 0 3.478 2.404Z" />
+                        </svg>
+                    </button>
+                    <div class="menu-anexos" id="menuAnexos">
+                        <button id="anexarImagem">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="size-6">
+                                <path fill-rule="evenodd"
+                                    d="M1.5 6a2.25 2.25 0 0 1 2.25-2.25h16.5A2.25 2.25 0 0 1 22.5 6v12a2.25 2.25 0 0 1-2.25 2.25H3.75A2.25 2.25 0 0 1 1.5 18V6ZM3 16.06V18c0 .414.336.75.75.75h16.5A.75.75 0 0 0 21 18v-1.94l-2.69-2.689a1.5 1.5 0 0 0-2.12 0l-.88.879.97.97a.75.75 0 1 1-1.06 1.06l-5.16-5.159a1.5 1.5 0 0 0-2.12 0L3 16.061Zm10.125-7.81a1.125 1.125 0 1 1 2.25 0 1.125 1.125 0 0 1-2.25 0Z"
+                                    clip-rule="evenodd" />
+                            </svg>
+                            Imagens
+                        </button>
+                        <button id="anexarLink">
+                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="size-6"
+                                style="transform: rotate(44deg);">
+                                <path fill-rule="evenodd"
+                                    d="M19.902 4.098a3.75 3.75 0 0 0-5.304 0l-4.5 4.5a3.75 3.75 0 0 0 1.035 6.037.75.75 0 0 1-.646 1.353 5.25 5.25 0 0 1-1.449-8.45l4.5-4.5a5.25 5.25 0 1 1 7.424 7.424l-1.757 1.757a.75.75 0 1 1-1.06-1.06l1.757-1.757a3.75 3.75 0 0 0 0-5.304Zm-7.389 4.267a.75.75 0 0 1 1-.353 5.25 5.25 0 0 1 1.449 8.45l-4.5 4.5a5.25 5.25 0 1 1-7.424-7.424l1.757-1.757a.75.75 0 1 1 1.06 1.06l-1.757 1.757a3.75 3.75 0 1 0 5.304 5.304l4.5-4.5a3.75 3.75 0 0 0-1.035-6.037.75.75 0 0 1-.354-1Z"
+                                    clip-rule="evenodd" />
+                            </svg>
+                            Link
+                        </button>
+                    </div>
+                </div>
+            </div>
+            <div class="nenhum-contato-selecionado">
+                <p>Selecione um contato para iniciar a conversa</p>
+            </div>
         </div>
     </div>
 
